# lol-eda

./: .gitignore  league-data-analysis.ipynb  lol_backend_service.py  pyproject.toml  utils.py
metadata/: champion.json
