[tool.poetry]
name = "lol-eda"
version = "0.1.0"
description = ""
authors = ["Matthew Concepcion <matthewconcepcion10@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
